manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordconverter-service
  labels:
    app: wordconverter
spec:
  selector:
    app: wordconverter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
