manifests/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordconverter-service
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
