manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordconverter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shopco.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordconverter-service
            port:
              number: 443
